--- a/index.html
+++ b/index.html
@@ -28,5 +28,20 @@
       </ul>
     </div>
   </nav>
+
+  <!-- Showcase -->
+  <header id="showcase">
+    <div class="container">
+      <div class="showcase-container">
+        <div class="showcase-content">
+          <div class="category category-sports">Sports</div>
+          <h1>Some Spports Article</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis debitis magnam, porro corporis provident accusamus deserunt, sequi architecto autem hic cupiditate quia ipsa nisi in ullam iste mollitia eos quod!</p>
+          <a href="article.html" class="btn btn-primary">Read More</a>
+
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
