--- a/index.html
+++ b/index.html
@@ -43,5 +43,72 @@
       </div>
     </div>
   </header>
+
+  <!-- Home Articles -->
+  <section id="home-articles" class="py-2">
+    <div class="container">
+      <h2>Editor Picks</h2>
+      <div class="articles-container">
+        <article class="card">
+          <img src="img/image_resources/articles/ent1.jpg" alt="">
+          <div>
+            <div class="category category-ent">Entertainment</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit.</a>
+            </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nemo possimus perferendis. Consectetur nobis modi porro labore, molestiae fugiat adipisci.</p>
+          </div>
+        </article>
+        <article class="card bg-dark">
+          <div class="category category-sports">Sports</div>
+          <h3>
+            <a href="article.html">Lorem ipsum dolor sit.</a>
+          </h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nemo possimus perferendis. Consectetur nobis modi porro labore, molestiae fugiat adipisci.</p> 
+        </article>
+        <article class="card">
+          <img src="img/image_resources/articles/tech1.jpg" alt="">
+          <div class="category category-tech">Technology</div>
+          <h3>
+            <a href="article.html">Lorem ipsum dolor sit.</a>
+          </h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nemo possimus perferendis. Consectetur nobis modi porro labore, molestiae fugiat adipisci.</p>
+        </article>
+        <article class="card">
+          <div class="category category-sports">Sports</div>
+          <h3>
+            <a href="article.html">Lorem ipsum dolor sit.</a>
+          </h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nemo possimus perferendis. Consectetur nobis modi porro labore, molestiae fugiat adipisci.</p>
+          <img src="img/image_resources/articles/sports1.jpg" alt="">
+        </article>
+        <article class="card">
+          <img src="img/image_resources/articles/tech2.jpg" alt="">
+          <div class="category category-tech">Technology</div>
+          <h3>
+            <a href="article.html">Lorem ipsum dolor sit.</a>
+          </h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nemo possimus perferendis. Consectetur nobis modi porro labore, molestiae fugiat adipisci.</p>
+        </article>
+        <article class="card bg-primary">
+          <div class="category category-sports">Sports</div>
+          <h3>
+            <a href="article.html">Lorem ipsum dolor sit.</a>
+          </h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nemo possimus perferendis. Consectetur nobis modi porro labore, molestiae fugiat adipisci.</p> 
+        </article>
+        <article class="card">
+          <div>
+            <div class="category category-ent">Entertainment</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit.</a>
+            </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nemo possimus perferendis. Consectetur nobis modi porro labore, molestiae fugiat adipisci.</p>
+          </div>
+          <img src="img/image_resources/articles/ent2.jpg" alt="">
+        </article>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
